--- a/EN/Toggles Guide.html
+++ b/EN/Toggles Guide.html
@@ -10,7 +10,7 @@
 <p>To enable a toggle, use <strong>s?toggle &lt;1-4&gt; enable</strong></p>
 <p><em>Example: <strong>s?toggle 2 enable</strong></em></p>
 <h2>Disabling a Toggle:</h2>
-<p>To enable a toggle, use <strong>s?toggle &lt;1-4&gt; disable</strong></p>
+<p>To disable a toggle, use <strong>s?toggle &lt;1-4&gt; disable</strong></p>
 <p><em>IExample: <strong>s?toggle 2 disable</strong></em></p>
 <h2><br>
    Visual Examples:
